Revision history for PerlIO-text

{{$NEXT}}

0.004     2011-07-26 23:09:45 Europe/Amsterdam
          Made module compatible with default :stdio

0.003     2011-07-22 14:17:07 Europe/Amsterdam
          Fixed vtable assignment on Win32

0.002     2011-07-09 18:33:23 Europe/Amsterdam
          Fix PerlIO::text on multiplicity perls
          Downgrade File::Slurp version requirement

0.001     2011-07-08 13:44:30 Europe/Amsterdam
          Initial release